Fixed scrolling in edition note on mobile device

--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/BookReader/css/readerStyle.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/BookReader/css/readerStyle.less
@@ -639,7 +639,7 @@ button {
         padding: 0px;
 
         .edition-note-text {
-          overflow-y: hidden;
+          overflow-y: auto;
         }
       }
     }
